@@ -76,6 +76,9 @@ lib/jsr223/scala/*.jar
 src/dist/*
 *.logdir_IS_UNDEFINED
 
+# Files produce by jenv
+.java-version
+
 # Sidecar version - generated by build.gradle
 sidecar.version
 
