@@ -20,6 +20,7 @@
 
 import com.github.spotbugs.SpotBugsTask
 import org.nosphere.apache.rat.RatTask
+import org.apache.tools.ant.taskdefs.condition.Os
 
 import java.nio.file.Files
 import java.nio.file.Paths
@@ -316,6 +317,9 @@ test {
     // ordinarily we don't need integration tests
     // see the integrationTest task
     useJUnitPlatform()
+    if (Os.isFamily(Os.FAMILY_MAC)) {
+        jvmArgs "-XX:-MaxFDLimit"
+    }
     reports {
         junitXml.enabled = true
         def destDir = Paths.get(rootProject.rootDir.absolutePath, "build", "test-results", "test").toFile()
@@ -328,7 +332,14 @@ test {
     }
 }
 
-def JDK11_OPTIONS = ['-Djdk.attach.allowAttachSelf=true',
+subprojects {
+    test {
+        jvmArgs "-XX:-MaxFDLimit"
+    }
+}
+
+def JDK11_OPTIONS = ['-XX:-MaxFDLimit',
+                     '-Djdk.attach.allowAttachSelf=true',
                      '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED',
                      '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED',
                      '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
@@ -410,6 +421,8 @@ tasks.register("containerTest", Test) {
     if (JavaVersion.current().isJava11Compatible()) {
         jvmArgs(JDK11_OPTIONS)
         println("JVM arguments for $project.name are $allJvmArgs")
+    } else {
+        jvmArgs '-XX:-MaxFDLimit'
     }
 
     useJUnitPlatform()
