@@ -29,3 +29,6 @@ dtestDependencyName=cassandra-dtest-local-all
 aswSdkVersion=2.20.43
 # The dep is to introduce xxhash impl
 commonsCodecVersion=1.16.1
+# If running MacOS then you need to increase the max
+# open FD limit
+org.gradle.jvmargs=-XX:-MaxFDLimit
